objects/Technician_Orders__c/Technician_Orders__c.object-meta.xml
<CustomObject>
    <label>Internal &amp; Technician Order</label>
    <nameField>
        <displayFormat>TO-{000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal &amp; Technician Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>