objects/Technician_Orders__c/fields/Anticipated_End__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_End__c</fullName>
    <label>Anticipated End</label>
    <type>DateTime</type>
</CustomField>