objects/Technician_Orders__c/fields/Authorisation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Authorisation_Date_Time__c</fullName>
    <label>Authorisation Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>