objects/Technician_Orders__c/fields/Comments_from_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Comments_from_Dispatch__c</fullName>
    <inlineHelpText>Enter in comments like the supplier name the goods have been sent direct from etc. Or if order is cancelled, change the status to Dispatched and enter comments here to confirm why and who cancelled.</inlineHelpText>
    <label>Comments from Dispatch</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>