objects/Technician_Orders__c/fields/Comments_to_Dispatch_Team__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Dispatch_Team__c</fullName>
    <inlineHelpText>Please enter any overall order comments here. If the comment is specific to a product, enter this in the Product Description field.</inlineHelpText>
    <label>Comments to Dispatch Team</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>