objects/Technician_Orders__c/fields/Courier_Reference__c.field-meta.xml
<CustomField>
    <fullName>Courier_Reference__c</fullName>
    <label>Courier Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>