objects/Technician_Orders__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eclipse Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>