objects/Technician_Orders__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <label>Delivery Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Address</fullName>
            </value>
            <value>
                <fullName>Lockup</fullName>
            </value>
            <value>
                <fullName>Office Collection</fullName>
            </value>
            <value>
                <fullName>Site Specific Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>