objects/Technician_Orders__c/fields/Description_10__c.field-meta.xml
<CustomField>
    <fullName>Description_10__c</fullName>
    <label>Description - 10</label>
    <type>TextArea</type>
</CustomField>