objects/Technician_Orders__c/fields/Description_7__c.field-meta.xml
<CustomField>
    <fullName>Description_7__c</fullName>
    <label>Description-7</label>
    <type>TextArea</type>
</CustomField>