objects/Technician_Orders__c/fields/Description_8__c.field-meta.xml
<CustomField>
    <fullName>Description_8__c</fullName>
    <label>Description - 8</label>
    <type>TextArea</type>
</CustomField>