objects/Technician_Orders__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Please include URLs, Links, Attach Photos to Notes &amp; Attachments etc.</inlineHelpText>
    <label>Description - A</label>
    <type>TextArea</type>
</CustomField>