objects/Technician_Orders__c/fields/Description_B__c.field-meta.xml
<CustomField>
    <fullName>Description_B__c</fullName>
    <label>Description - B</label>
    <type>TextArea</type>
</CustomField>