objects/Technician_Orders__c/fields/Description_C__c.field-meta.xml
<CustomField>
    <fullName>Description_C__c</fullName>
    <label>Description - C</label>
    <type>TextArea</type>
</CustomField>