objects/Technician_Orders__c/fields/Description_D__c.field-meta.xml
<CustomField>
    <fullName>Description_D__c</fullName>
    <label>Description - D</label>
    <type>TextArea</type>
</CustomField>