objects/Technician_Orders__c/fields/Description_E__c.field-meta.xml
<CustomField>
    <fullName>Description_E__c</fullName>
    <label>Description - E</label>
    <type>TextArea</type>
</CustomField>