objects/Technician_Orders__c/fields/Description_F__c.field-meta.xml
<CustomField>
    <fullName>Description_F__c</fullName>
    <label>Description - F</label>
    <type>TextArea</type>
</CustomField>