objects/Technician_Orders__c/fields/Email_User_1__c.field-meta.xml
<CustomField>
    <fullName>Email_User_1__c</fullName>
    <description>whenever the Comments to Dispatch Team field changes it sends an email to Rachel.Dowrick@hentland.com</description>
    <inlineHelpText>whenever the Comments to Dispatch Team field changes it sends an email to Rachel.Dowrick@hentland.com</inlineHelpText>
    <label>Email User 1</label>
    <type>Email</type>
</CustomField>