objects/Technician_Orders__c/fields/Email_User_2__c.field-meta.xml
<CustomField>
    <fullName>Email_User_2__c</fullName>
    <description>whenever the Comments to Dispatch Team field changes it sends an email to Tracey.Coles@hentland.com.</description>
    <inlineHelpText>whenever the Comments to Dispatch Team field changes it sends an email to Tracey.Coles@hentland.com.</inlineHelpText>
    <label>Email User 2</label>
    <type>Email</type>
</CustomField>