objects/Technician_Orders__c/fields/Estimated_Cost_10__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_10__c</fullName>
    <label>Estimated Cost - 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>