objects/Technician_Orders__c/fields/Estimated_Cost_B__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_B__c</fullName>
    <label>Estimated Cost - B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>