objects/Technician_Orders__c/fields/Estimated_Cost_F__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_F__c</fullName>
    <label>Estimated Cost - F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>