objects/Technician_Orders__c/fields/Estimated_Time_A__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_A__c</fullName>
    <inlineHelpText>This is the estimated per unit cost for the product for GPs, to be completed by Dispatch.</inlineHelpText>
    <label>Estimated Cost - A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>