objects/Technician_Orders__c/fields/Estimated_Time_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_and_Comments__c</fullName>
    <inlineHelpText>This is the estimated time with comments to do this job.</inlineHelpText>
    <label>Estimated Time and Comments</label>
    <type>TextArea</type>
</CustomField>