objects/Technician_Orders__c/fields/For_Attention_Of__c.field-meta.xml
<CustomField>
    <fullName>For_Attention_Of__c</fullName>
    <label>For Attention Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>