objects/Technician_Orders__c/fields/Make_Manufacturer_7__c.field-meta.xml
<CustomField>
    <fullName>Make_Manufacturer_7__c</fullName>
    <label>Make / Manufacturer - 7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>