objects/Technician_Orders__c/fields/Make_Manufacturer_A__c.field-meta.xml
<CustomField>
    <fullName>Make_Manufacturer_A__c</fullName>
    <label>Make / Manufacturer - A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>