objects/Technician_Orders__c/fields/Make_Manufacturer_B__c.field-meta.xml
<CustomField>
    <fullName>Make_Manufacturer_B__c</fullName>
    <label>Make / Manufacturer - B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>