objects/Technician_Orders__c/fields/Make_Manufacturer_E__c.field-meta.xml
<CustomField>
    <fullName>Make_Manufacturer_E__c</fullName>
    <label>Make / Manufacturer - E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>