objects/Technician_Orders__c/fields/Make_Manufacturer_F__c.field-meta.xml
<CustomField>
    <fullName>Make_Manufacturer_F__c</fullName>
    <label>Make / Manufacturer -F</label>
    <length>255</length>
    <type>Text</type>
</CustomField>