objects/Technician_Orders__c/fields/Model_Part_Number_A__c.field-meta.xml
<CustomField>
    <fullName>Model_Part_Number_A__c</fullName>
    <inlineHelpText>Enter the product&apos;s code.</inlineHelpText>
    <label>Model / Part Number - A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>