objects/Technician_Orders__c/fields/Model_Part_Number_D__c.field-meta.xml
<CustomField>
    <fullName>Model_Part_Number_D__c</fullName>
    <label>Model / Part Number - D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>