objects/Technician_Orders__c/fields/Model_Part_Number_E__c.field-meta.xml
<CustomField>
    <fullName>Model_Part_Number_E__c</fullName>
    <label>Model / Part Number - E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>