objects/Technician_Orders__c/fields/More_Pictures_and_Info__c.field-meta.xml
<CustomField>
    <fullName>More_Pictures_and_Info__c</fullName>
    <label>More Pictures and Info</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>