objects/Technician_Orders__c/fields/Priority_Status__c.field-meta.xml
<CustomField>
    <fullName>Priority_Status__c</fullName>
    <inlineHelpText>Those placing the order, select a priority 1, 2 or 3.</inlineHelpText>
    <label>Priority/Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 = Life Threatening Within 24hrs</fullName>
            </value>
            <value>
                <fullName>2 = Urgent 48hrs</fullName>
            </value>
            <value>
                <fullName>3 = Not urgent within 7 days</fullName>
            </value>
            <value>
                <fullName>Returned For More Information</fullName>
            </value>
            <value>
                <fullName>Part Dispatched</fullName>
            </value>
            <value>
                <fullName>Parts On Order</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>