objects/Technician_Orders__c/fields/Qty_10__c.field-meta.xml
<CustomField>
    <fullName>Qty_10__c</fullName>
    <label>Qty - 10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>