objects/Technician_Orders__c/fields/Qty_7__c.field-meta.xml
<CustomField>
    <fullName>Qty_7__c</fullName>
    <label>Qty - 7</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>