objects/Technician_Orders__c/fields/Qty_8__c.field-meta.xml
<CustomField>
    <fullName>Qty_8__c</fullName>
    <label>Qty - 8</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>