objects/Technician_Orders__c/fields/Qty_A__c.field-meta.xml
<CustomField>
    <fullName>Qty_A__c</fullName>
    <label>Qty - A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>