objects/Technician_Orders__c/fields/Qty_B__c.field-meta.xml
<CustomField>
    <fullName>Qty_B__c</fullName>
    <label>Qty - B</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>