objects/Technician_Orders__c/fields/Qty_C__c.field-meta.xml
<CustomField>
    <fullName>Qty_C__c</fullName>
    <label>Qty - C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>