objects/Technician_Orders__c/fields/Qty_D__c.field-meta.xml
<CustomField>
    <fullName>Qty_D__c</fullName>
    <label>Qty - D</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>