objects/Technician_Orders__c/fields/Qty_E__c.field-meta.xml
<CustomField>
    <fullName>Qty_E__c</fullName>
    <label>Qty - E</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>