objects/Technician_Orders__c/fields/Qty_F__c.field-meta.xml
<CustomField>
    <fullName>Qty_F__c</fullName>
    <label>Qty - F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>