objects/Technician_Orders__c/fields/Reason_If_48_Hours_Notice__c.field-meta.xml
<CustomField>
    <fullName>Reason_If_48_Hours_Notice__c</fullName>
    <label>Reason If &lt; 48 Hours Notice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>