objects/Technician_Orders__c/fields/Reason_Returned_For_More_Information__c.field-meta.xml
<CustomField>
    <fullName>Reason_Returned_For_More_Information__c</fullName>
    <label>Reason Returned For More Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>