objects/Technician_Orders__c/fields/Reason_Site_Address_Selected__c.field-meta.xml
<CustomField>
    <fullName>Reason_Site_Address_Selected__c</fullName>
    <inlineHelpText>If Site Address is selected, please enter a reason why the goods are being sent direct to Site rather than to a Home Address, Lockup or Collected.</inlineHelpText>
    <label>Reason Site Address Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>