objects/Technician_Orders__c/fields/Reference_Number_Link__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Link__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>