objects/Technician_Orders__c/fields/Required_By_On__c.field-meta.xml
<CustomField>
    <fullName>Required_By_On__c</fullName>
    <defaultValue>Today()+3</defaultValue>
    <inlineHelpText>Date auto populates to 3 days in advance, as this is our usual lead time for orders.</inlineHelpText>
    <label>Required By / On</label>
    <type>Date</type>
</CustomField>