objects/Technician_Orders__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Address</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technician Orders</relationshipLabel>
    <relationshipName>Technician_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>