objects/Technician_Orders__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <inlineHelpText>Enter any solution details that may be of use later on, and/or by way of an explanation of work carried out.</inlineHelpText>
    <label>Solution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>