objects/Technician_Orders__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Visit this order relates to.</inlineHelpText>
    <label>Visit</label>
    <referenceTo>Visits__c</referenceTo>
    <relationshipLabel>Internal &amp; Technician Orders</relationshipLabel>
    <relationshipName>Internal_Technician_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>