objects/Technician_Orders__c/fields/WB_Cost_Authorisation__c.field-meta.xml
<CustomField>
    <fullName>WB_Cost_Authorisation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Warren Bidmead to tick this as authorisation to do the work.</inlineHelpText>
    <label>WB Cost Authorisation</label>
    <type>Checkbox</type>
</CustomField>