objects/Technician_Orders__c/fields/Who_has_requested_the_change__c.field-meta.xml
<CustomField>
    <fullName>Who_has_requested_the_change__c</fullName>
    <label>Who has requested the change?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>