objects/Technician_Orders__c/fields/Who_is_working_on_this__c.field-meta.xml
<CustomField>
    <fullName>Who_is_working_on_this__c</fullName>
    <label>Who is working on this ?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>