objects/Technician_Orders__c/fields/Work_Starts__c.field-meta.xml
<CustomField>
    <fullName>Work_Starts__c</fullName>
    <label>Work Starts</label>
    <type>DateTime</type>
</CustomField>