objects/Technician_Orders__c/recordTypes/Internal_Technician_Order.recordType-meta.xml
<RecordType>
    <fullName>Internal_Technician_Order</fullName>
    <active>true</active>
    <label>Internal &amp; Technician Order</label>
</RecordType>