objects/Technician_Orders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Reason_If_48_Hours_Notice__c</columns>
    <columns>Who_has_requested_the_change__c</columns>
    <columns>Who_is_working_on_this__c</columns>
    <columns>Required_By_On__c</columns>
    <columns>Actual_End__c</columns>
    <columns>Anticipated_End__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>